--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -28,5 +28,5 @@
           </tr> 
     </table>
       </div>
-      <button type="button" class="rounded-pill btn-block" (click)="next()">Continue for Payment</button>
+      <button type="button" class="rounded-pill btn-block">Continue for Payment</button>
 </div>
